Fix editor-side alignment of average review rating

--- a/src/blocks/review/editor.scss
+++ b/src/blocks/review/editor.scss
@@ -34,5 +34,6 @@
 	}
 	> .ub_review_average {
 		flex-basis: 25%;
+		margin-left: auto;
 	}
 }
